--- a/l4d2/motd.htm
+++ b/l4d2/motd.htm
@@ -17,8 +17,9 @@
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
 .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 </style>
-      <a href="https://discord.gg/Rre3a7Xbt3">Discord</a>
-      <a href="https://steamcommunity.com/groups/Sentinelclan"></a>
+	  <p>
+      <a href="https://discord.gg/Rre3a7Xbt3"><img src="discord.png"></img> Discord</a>
+      <a href="https://steamcommunity.com/groups/Sentinelclan"><img src="steam.png"></img>Steam Group</a>
 <table class="tg">
 <thead>
   <tr>
