--- a/l4d2/motd.htm
+++ b/l4d2/motd.htm
@@ -1,47 +1,48 @@
 <html>
     <head>
         <title>[Sentinel] L4D2 Party Zone (SXPM) </title>
-    </head>
-    <body style="margin:0px;
-                padding:0px;
-				width:99%;
-				height:100%">
-        <style type="text/css">
+		<style type="text/css">
 .tg  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
 .tg td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:0px;color:#002b36;
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:0px;color:#fdf6e3;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg .tg-zkss{background-color:#FFF;border-color:inherit;color:#333;text-align:center;vertical-align:top}
+.tg .tg-ycr8{background-color:#ffffff;text-align:left;vertical-align:top}
 .tg .tg-acii{background-color:#FFF;border-color:inherit;color:#333;text-align:left;vertical-align:top}
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-i81m{background-color:#ffffff;text-align:center;vertical-align:top}
 </style>
+    </head>
+    <body style="margin:0px;
+                padding:0px;
+				width:99%;
+				height:100%">
+        
 	  <p>
       <a href="https://discord.gg/Rre3a7Xbt3"><img src="discord.png"></img> Discord</a>
       <a href="https://steamcommunity.com/groups/Sentinelclan"><img src="steam.png"></img>Steam Group</a>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-c3ow" colspan="2">Commands</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-0pky">/sxpm<br></td>
-    <td class="tg-c3ow">SXPM Menu</td>
-  </tr>
-  <tr>
-    <td class="tg-acii">/sb</td>
-    <td class="tg-zkss">Switch to an available BOT</td>
-  </tr>
-  <tr>
-    <td class="tg-acii">/map</td>
-    <td class="tg-zkss">Start a map vote</td>
-  </tr>
-</tbody>
-</table>
-            </div>
-        </div>
+		<table class="tg">
+		<thead>
+		  <tr>
+			<th class="tg-c3ow" colspan="2">Commands</th>
+		  </tr>
+		</thead>
+		<tbody>
+		  <tr>
+			<td class="tg-0pky">/sxpm<br></td>
+			<td class="tg-c3ow">SXPM Menu</td>
+		  </tr>
+		  <tr>
+			<td class="tg-acii">/sb</td>
+			<td class="tg-zkss">Switch to an available BOT</td>
+		  </tr>
+		  <tr>
+			<td class="tg-acii">/map</td>
+			<td class="tg-zkss">Start a map vote</td>
+		  </tr>
+		</tbody>
+		</table>
+            
     </body>
 </html> 
