--- a/l4d2/motd.htm
+++ b/l4d2/motd.htm
@@ -20,8 +20,8 @@
 				height:100%">
         
 	  <p>
-      <a href="https://discord.gg/Rre3a7Xbt3"><img src="discord.png"></img> Discord</a>
-      <a href="https://steamcommunity.com/groups/Sentinelclan"><img src="steam.png"></img>Steam Group</a>
+      <a href="https://discord.gg/Rre3a7Xbt3"><img width="30" height="30" alt="Discord" src="discord.png"></img></a>
+      <a href="https://steamcommunity.com/groups/Sentinelclan"><img width="30" height="30" alt="Steam" src="steam.png"></img></a>
 		<table class="tg">
 		<thead>
 		  <tr>
