--- a/l4d2/motd/index.html
+++ b/l4d2/motd/index.html
@@ -1,23 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
         <title>[Sentinel] L4D2 Party Zone (SXPM) </title>
-		<style type="text/css">
-.tg  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
-.tg td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:0px;color:#002b36;
-  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:0px;color:#fdf6e3;
-  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-zkss{background-color:#FFF;border-color:inherit;color:#333;text-align:center;vertical-align:top}
-.tg .tg-ycr8{background-color:#ffffff;text-align:left;vertical-align:top}
-.tg .tg-acii{background-color:#FFF;border-color:inherit;color:#333;text-align:left;vertical-align:top}
-.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-i81m{background-color:#ffffff;text-align:center;vertical-align:top}
-</style>
+		
     </head>
-    <body style="margin:0px;
-                padding:0px;
-				width:99%;
-				height:100%">
+    <body>
         
 	  <p>
       <a href="https://discord.gg/Rre3a7Xbt3"><img width="30" height="30" alt="Discord" src="discord.png"></img></a>
