--- a/l4d2/banner/index.html
+++ b/l4d2/banner/index.html
@@ -4,4 +4,7 @@
     <body>
               <img src="https://avatars.akamai.steamstatic.com/3c99155284dc62bafe674fa4aa3ab2b48d778a35_full.jpg" width="150" height="150"></img>
     </body>
-</html> 
+</html>
+
+<html>
+
