--- a/l4d2/motd/index.html
+++ b/l4d2/motd/index.html
@@ -6,7 +6,7 @@
 		
     </head>
     <body>
-        
+        asdasd
 	  <p>
       <a href="https://discord.gg/Rre3a7Xbt3"><img width="30" height="30" alt="Discord" src="discord.png"></img></a>
       <a href="https://steamcommunity.com/groups/Sentinelclan"><img width="30" height="30" alt="Steam" src="steam.png"></img></a>
